--- a/zlude.cabal
+++ b/zlude.cabal
@@ -22,7 +22,8 @@ common warnings
 library
     import:           warnings
     build-depends:    base ^>=4.17.2.1
-    exposed-modules:  Zlude.Bool, Zlude.Group, Zlude.Group.Wrappers, Zlude.Numeric
+    exposed-modules:  Zlude.Bool, Zlude.Maybe, Zlude.Either,
+                      Zlude.Group, Zlude.Group.Wrappers, Zlude.Numeric
     default-extensions:
         NoImplicitPrelude LambdaCase ConstraintKinds FlexibleContexts FlexibleInstances
     other-extensions:
