--- a/zlude.cabal
+++ b/zlude.cabal
@@ -1,13 +1,9 @@
 cabal-version:      3.0
 name:               zlude
 version:            0.1.0.0
--- synopsis:
--- description:
 license:            MIT
 license-file:       LICENSE
 author:             Z Cater
--- maintainer:
--- copyright:
 extra-doc-files:    README.md
 
 common warnings
@@ -24,12 +20,11 @@ library
     build-depends:    base ^>=4.17.2.1
     exposed-modules:  Zlude.Bool, Zlude.Maybe, Zlude.Either,
                       Zlude.Group, Zlude.Group.Wrappers, Zlude.Numeric,
-                      Zlude.Char
+                      Zlude.Char, Zlude.String
     default-extensions:
         NoImplicitPrelude LambdaCase ConstraintKinds FlexibleContexts FlexibleInstances
     other-extensions:
-        CPP NoRebindableSyntax DeriveFunctor
-        DeriveFoldable DeriveTraversable
+        CPP RebindableSyntax DeriveFunctor DeriveFoldable DeriveTraversable
     default-language: Haskell2010
 
 executable examples
